--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,10 +2,10 @@
     "id": "MyDubList",
     "name": "MyDubList",
     "version": "1.0.0",
-    "manifestURI": "",
+    "manifestURI": "https://raw.githubusercontent.com/Bas1874/MyDubList-Seanime/refs/heads/main/src/manifest.json",
     "language": "typescript",
     "type": "plugin",
-    "description": "Displays voice actors for characters and their work.",
+    "description": "Shows what animes are dubbed inside of seanime",
     "author": "bas1874",
     "icon": "https://raw.githubusercontent.com/Bas1874/MyDubList-Seanime/refs/heads/main/src/icons/logo.png",
     "website": "",
