--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
     "manifestURI": "https://raw.githubusercontent.com/Bas1874/MyDubList-Seanime/refs/heads/main/src/manifest.json",
     "language": "typescript",
     "type": "plugin",
-    "description": "Shows what animes are dubbed inside of seanime",
+    "description": "Adds a customizable Dubbed badge to anime cards in Seanime, indicating if a dub exists in your selected language based on data from MyDubList.com",
     "author": "bas1874",
     "icon": "https://raw.githubusercontent.com/Bas1874/MyDubList-Seanime/refs/heads/main/src/icons/logo.png",
     "website": "",
