--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "MyDubList",
     "name": "MyDubList",
-    "version": "1.0.3",
+    "version": "1.1.0",
     "manifestURI": "https://raw.githubusercontent.com/Bas1874/MyDubList-Seanime/refs/heads/main/src/manifest.json",
     "language": "typescript",
     "type": "plugin",
@@ -14,7 +14,15 @@
     "plugin": {
         "version": "1",
         "permissions": {
-            "scopes": []
+            "scopes": [],
+            "allow": {
+                "unsafeFlags": [
+                    {
+                        "flag": "dom-script-manipulation",
+                        "reason": "Needed to inject the custom Dub Badge UI elements onto anime cards."
+                    }
+                ]
+            }
         }
     },
     "isDevelopment": false
